Extend OpenAPI specification
