# app.py
@@ -89,7 +89,7 @@ def status():
 @app.route('/openapi.json')
 def openapi():
     openapi = json.load(open("openapi.json", "r"))
-    for kind in ["collection", "mappings"]:
+    for kind in ["collection", "terminology", "mappings"]:
         with open(f"lib/{kind}-schema.json", "r") as file:
             openapi["components"]["schemas"][kind] = json.load(file)
     return openapi
